# iampi31415.github.io

./: .gitignore  .rumdl.toml  404.html  CONTRIBUTING.md  README.md  index.html  print.html  searcher-c2a407aa.js  searchindex-2f22cf28.js  searchindex-3e1d7eb8.js  searchindex-3f880c4a.js  searchindex-44683c20.js  searchindex-46291694.js  searchindex-51f0708b.js  searchindex-712e6415.js  searchindex-7f26b295.js  searchindex-84c4dc77.js  searchindex-92f40ee4.js  searchindex-97f7ff97.js  searchindex-b25da026.js  searchindex-da6833dd.js  toc-555589cf.js  toc-674a30d6.js  toc-b8d49595.js  toc-be469966.js  toc-cd8f4671.js  toc-f2d9d81d.js  toc.html
.github/workflows/: publish.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/ch_1/: definitions.md  hardware.md  intro.md  no_std.md  software.md
book/src/ch_2/: blinky.md  defmt.md  handle_input.md  hello_world.md  panic.md
book/src/ch_3/: commands.md  debug.md  gdb.md  set_up.md
ch_1/: definitions.html  hardware.html  intro.html  no_std.html  software.html
ch_2/: blinky.html  defmt.html  handle_input.html  hardware.html  hello_world.html  panic.html  software.html
ch_3/: blinky.html  defmt.html  gdb.html  handle_input.html  hello_world.html  panic.html  set_up.html
exercises/: update_all.sh
exercises/blinky/: Cargo.toml
exercises/defmt/: Cargo.toml
exercises/defmt/.cargo/: config.toml
exercises/defmt/examples/: defmt.rs
exercises/defmt/src/: main.rs
exercises/gdb_hello_world/: .gdbinit  Cargo.toml  README.md  gdbinit  openocd.cfg
exercises/gdb_hello_world/.cargo/: config.toml
exercises/gdb_hello_world/src/: main.rs
exercises/gdb_hello_world/tests/: hello_test.rs
exercises/handle_input/: Cargo.toml
exercises/handle_input/examples/: handle_input
exercises/handle_input/src/: main.rs
exercises/hello_world/: Cargo.toml
exercises/hello_world/.cargo/: config.toml
exercises/hello_world/examples/: hello_world.rs
exercises/hello_world/src/: main.rs
exercises/panic/: Cargo.toml
exercises/panic/.cargo/: config.toml
exercises/panic/examples/: panic.rs
exercises/panic/src/: main.rs
exercises/uart/: Cargo.toml  Embed.toml
exercises/uart/example/: uart.rs
src/assets/: custom.css
