[package]
edition      = "2024"
name         = "discovery-esp32c6"
rust-version = "1.88"
version      = "0.1.0"
# previous author https://github.com/SergioGasquez
authors = ["gh:iampi31415"]
license      = "MIT"

[[bin]]
name = "discovery-esp32c6"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }


esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }

critical-section = "1.2.0"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.1", features = ["defmt"] }
embedded-hal = "1.0.0"
defmt = "1.0.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
